src/games/wordle/Wordle.css
.wordleGrid {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    margin: 20px 0 90px 0;
}

.wordleGame h1 {
    display: flex;
    justify-content: center;
    font-size: 65px;
    color: #F26BC3;
}
  
.row {
    display: flex;
    gap: 5px;
}
  
.cell {
    width: 48px;
    height: 48px;
    border: 2px solid #ccc;
    background-color: #f0f0f0;
    font-size: 38px;
    text-transform: uppercase;
    font-weight: bold;
    display: flex;
    align-items: center;
    justify-content: center;
}
  
.cell.active {
    border-color: #007bff;
    background-color: #e5f2f9;
}

.cell.green {
    background-color: #6aaa64;
    border-color: #6aaa64;
    color: white;
    font-weight: bold;
    text-align: center;
    line-height: 40px;
}

.cell.yellow {
    background-color: #c9b458;
    border-color: #c9b458;
    color: white;
    font-weight: bold;
    text-align: center;
    line-height: 40px;
}

.cell.grey {
    background-color: #787c7e;
    border-color: #787c7e;
    color: white;
    font-weight: bold;
    text-align: center;
    line-height: 40px;
}

.key.special {
    width: 78px;
    font-size: 30px;
    font-weight: 600;
}

